--- a/src/app/search/search.component.html
+++ b/src/app/search/search.component.html
@@ -1,7 +1,6 @@
 <form [formGroup]="searchForm">
-  <div class="form-group">
-    <span class="searchbox-icon"><i class="fa fa-search"></i></span>
-    <input class="center-block fullwidth search" type="text" placeholder="Enter Country Name"
-    >
-  </div>
+    <div class="form-group">
+        <span class="searchbox-icon"><i class="fa fa-search"></i></span>
+        <input class="center-block fullwidth search" type="text" placeholder="Enter Country Name" required>
+    </div>
 </form>
